# tusdatos-backend

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 005f29e55a36_create_initial_event_schema.py  20260414_add_usuario_roleenum.py  20260415_split_user_and_event_registration_enums.py  20260416_store_roles_as_varchar.py
backend/api/routes/: auth.py  event.py
backend/controllers/: auth.py  event.py
backend/core/: config.py  permissions.py  security.py
backend/database/: main.py
backend/models/: __init__.py  db_types.py  event.py  roles.py  user.py
backend/schemas/: main.py
backend/scripts/: reset_database.py  seed_admin.py
backend/tests/: conftest.py  test_auth.py  test_events.py  test_registrations.py  test_sessions.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts  configAxios.ts
frontend/src/app/: Register.tsx  SignIn.tsx
frontend/src/app/admin/: AdminDashboard.tsx  AdminEvents.tsx  AdminUsers.tsx
frontend/src/auth/: AuthContext.tsx  AuthLayout.tsx  PrivateRoute.tsx  PublicRoute.tsx  RoleRoute.tsx
frontend/src/lib/: useDebounce.test.ts
frontend/src/providers/: TransitionContext.tsx  TransitionLink.tsx  TransitionProvider.tsx
frontend/src/redux/: selectors.ts
frontend/src/services/: authService.test.ts  authService.ts
(+59 files in other folders)
